# redoxos-nix

./: .gitignore  .ignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build-env.sh  build-plan.json  build-relibc.sh  build-simple.sh  build-with-patches.sh  build-with-wrappers.sh  cargo-wrapper.sh  comprehensive-qemu-test.sh  create-wrappers.sh  default.nix  fix-and-build.sh  fix-cross-compiler.sh  flake.nix  patch-rust-toolchain.sh  qemu-redox-boot-guide.md  result  result-1  result-bootloader  result-fd  run-auto-enter.sh  run-build.sh  run-interactive.sh  run-redox-auto.sh  shell.nix  shell.nix.nixtamal  snix-analysis.md  test-qemu-configs.sh  test-redox.sh  test-working-configs.sh
.agent/: napkin.md  plan.md
.claude/: 2026-02-17-ultra-research-virtio-netd-bugs.md  add-orbital-plan_2026-01-03_22-50-00.md  auto-network-config-plan_2026-01-03_19-45-00.md  cloud-hypervisor-improvements_2026-01-05_20-20-35.md  cloud-hypervisor-networking_2026-01-03_15-04-03.md  cloud-hypervisor-plan_2026-01-03_11-57-25.md  cloud-hypervisor-test-report_2026-01-05_20-13-59.md  codebase-audit_2026-01-03_22-00-00.md  host-tool-testing-plan_2026-01-03_16-15-00.md  orbital-fix_2026-01-05_19-30-00.md  orbital-login-fix_2026-01-05_21-00-00.md  settings.local.json  vesad-fix_2026-01-04_04-36-00.md  vm-verification_2026-01-03_22-40-00.md  what-next-analysis_2026-01-03_15-30-00.md  what-next-analysis_2026-01-03_18-47-07.md  what-next-analysis_2026-01-03_19-00-00.md  what-next-analysis_2026-01-03_20-30-00.md  what-next-analysis_2026-01-03_21-42-00.md  what-next-analysis_2026-01-04_05-45-00.md  what-next-analysis_2026-01-04_06-30-00.md
.config/: nextest.toml
.github/workflows/: ci.yml
.pi/: prompt-history.jsonl
.pijul/changes/5C/: RHAEJ7FQHA46CZUADEBP5JRVNRTHYN2SBRU5PUMFAZ5GBXGWZQC.change
.pijul/changes/O6/: GPBDGEM54JOR5IFMVREUYIDHPOUFTV7F5CPGADLVJPKAT237TQC.change
.pijul/changes/RQ/: BB3WLDOFGDH7JGKQW42YU57PPXQ4FOUC5NXPG2SPJSYCMKJYDQC.change
.pijul/pristine/: db
nix/flake-modules/: apps.nix  checks.nix  config.nix  default.nix  devshells.nix  flake-modules.nix  formatter.nix  git-hooks.nix  nixos-module.nix  overlays.nix  packages.nix  redox-env.nix  sources.nix  system.nix  toolchain.nix  treefmt.nix
nix/lib/: bridge-eval.nix  build-binary-cache.py  cross-compile.nix  default.nix  mk-binary-cache.nix  redox-buildRustCrate.nix  rust-flags.nix  stub-libs.nix  sysroot.nix  vendor.nix
nix/modules/: default.nix  redox-packages.nix
nix/patches/: redoxfs-uid-gid-override.patch
nix/patches/base/: 0001-cloud-hypervisor-support.patch  0002-usb-initfs-driver-paths.patch
nix/pkgs/: default.nix  image.nix  kernel.nix  toolchain.nix
nix/pkgs/host/: cookbook.nix  installer.nix  redoxfs.nix
nix/pkgs/infrastructure/: bat-redox-plan.json  boot-test.nix  bootstrap.nix  bridge-test.nix  build-bridge.nix  cloud-hypervisor-runners.nix  default.nix  disk-image.nix  dust-redox-plan.json  exampled-redox-plan.json  fd-redox-plan.json  functional-test.nix  hexyl-redox-plan.json  initfs-tools.nix  initfs.nix  lsd-redox-plan.json  network-test.nix  neutralize-build-scripts.py  push-to-redox.nix  qemu-runners.nix  redox-rebuild.nix  shellharden-redox-plan.json  smith-redox-plan.json  snix-source-bundle.nix  tokei-redox-plan.json  zoxide-redox-plan.json
nix/pkgs/patches/: graphicscreen-mmap.patch  virtio-core-repost-buffer.py  virtio-netd-irq-wakeup.py  virtio-netd-rx-recycle.py
nix/pkgs/system/: base.nix  bootloader.nix  kernel.nix  patch-relibc-chdir-deadlock.py  patch-relibc-dso-environ.py  patch-relibc-environ-diag.py  patch-relibc-environ-dso-init.py  patch-relibc-environ-trace.py  patch-relibc-execvpe.py  patch-relibc-fcntl-lock.py  patch-relibc-getenv-diag.py  patch-relibc-grow-main-stack.py  patch-relibc-ld-so-align.py  patch-relibc-ld-so-cwd.py  patch-relibc-prefault-stack.py  relibc.nix
nix/pkgs/userspace/: bat.nix  bottom.nix  bzip2-redox.nix  ca-certificates.nix  cc-wrapper-redox.nix  cmake-redox.nix  contain.nix  curl-redox.nix  difft.nix  dust.nix  exampled.nix  expat-redox.nix  extrautils.nix  fd.nix  findutils.nix  games.nix  gettext-redox.nix  harfbuzz-redox.nix  hexyl.nix  lsd.nix  (+53 more)
nix/redox-system/: default.nix  eval.nix  lib.nix  module-list.nix
nix/tamal/: .ignore  default.nix  lock.json  manifest.kdl
nix/tests/: README.md  artifacts.nix  default.nix  eval.nix  lib.nix  mock-pkgs.nix  types.nix
snix-redox/: Cargo.toml
snix-redox/nix-compat-derive/: Cargo.toml
snix-redox/nix-compat-redox/: Cargo.toml
snix-redox/nix-compat-redox/src/: lib.rs  path_info.rs
snix-redox/nix-compat-redox/src/derivation/: parser.rs
snix-redox/nix-compat-redox/src/log/: mod.rs
snix-redox/nix-compat-redox/src/nar/writer/: async.rs  sync.rs
snix-redox/nix-compat-redox/src/narinfo/: mod.rs
snix-redox/nix-compat-redox/src/nix_daemon/: handler.rs
snix-redox/nix-compat-redox/src/nix_daemon/framing/: framed_read.rs
snix-redox/patches/: 0001-systems-add-redox-os-support.patch
snix-redox/snix-eval-vendored/snix-eval/: Cargo.toml
snix-redox/snix-eval-vendored/snix-eval-builtin-macros/: Cargo.toml
snix-redox/snix-eval-vendored/snix-eval-builtin-macros/src/: lib.rs
snix-redox/snix-eval-vendored/snix-eval/src/: errors.rs  io.rs  lib.rs  nix_search_path.rs  opcode.rs  pretty_ast.rs  spans.rs  systems.rs
snix-redox/snix-eval-vendored/snix-eval/src/builtins/: mod.rs
snix-redox/snix-eval-vendored/snix-eval/src/compiler/: mod.rs
snix-redox/snix-eval-vendored/snix-eval/src/vm/: mod.rs
snix-redox/src/: activate.rs  bridge.rs  bridge_build.rs  cache.rs  channel.rs  eval.rs  file_io_worker.rs  install.rs  lib.rs  local_build.rs  local_cache.rs  main.rs  nar.rs  pathinfo.rs  rebuild.rs  sandbox.rs  snix_io.rs  store.rs  system.rs  vendor.rs
snix-redox/src/build_proxy/: allow_list.rs  handler.rs  lifecycle.rs  mod.rs
snix-redox/src/profiled/: handles.rs  mapping.rs  mod.rs  scheme.rs
snix-redox/src/stored/: handles.rs  mod.rs  scheme.rs
snix-redox/testdata/: 4wvvbi4jwn0prsdxb7vs673qa5h9gr7x-foo.drv
snix-redox/tests/redox/: proxy_namespace_test.rs
src/netcfg-setup/: Cargo.toml
(+117 files in other folders)
