[package]
name = "nix-compat"
version = "0.1.0"
edition = "2024"

[features]
# serde support on types
serde = ["dep:serde", "dep:serde_json", "dep:serde_with"]
test = []

# Disable all async/daemon features by default for Redox
default = []

[lints.rust]
# Silence warnings for feature flags that exist in upstream but we stripped
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(feature, values("async", "wire", "daemon", "flakeref"))'
] }

[dependencies]
bitflags = "2.6"
bstr = { version = "1.10", features = ["alloc", "unicode", "serde"] }
data-encoding = "2.6"
ed25519 = "2.2"
ed25519-dalek = "2.1"
nom = "8.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.9", default-features = false, features = ["macros"], optional = true }
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1"
num_enum = "0.7.3"

# mimalloc REMOVED — only used in benchmarks, not library code.
# Avoids C compilation issues with relibc's stdatomic.h

[dependencies.nix-compat-derive]
path = "../nix-compat-derive"
optional = true
