[package]
name = "snix-eval"
version = "0.1.0"
edition = "2024"

[lib]
name = "snix_eval"

[dependencies]
builtin-macros = { path = "../snix-eval-builtin-macros", package = "snix-eval-builtin-macros" }
bytes = "1.7"
bstr = { version = "1.10", features = ["serde"] }
codemap = "0.1.3"
codemap-diagnostic = "0.1.2"
genawaiter = { version = "0.99.1", default-features = false }
hashbrown = "0.15"
itertools = "0.12"
lexical-core = { version = "0.8.5", features = ["format", "parse-floats"] }
os_str_bytes = { version = "6.6", features = ["conversions"] }
path-clean = "0.1"
regex = "1.10"
rnix = "0.14.0"
rowan = "0.16"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
smol_str = "0.2"
tabwriter = "1.4"
toml = "0.6.0"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
data-encoding = "2.6"
rustc-hash = { version = "2.0", features = ["std"] }
vu128 = "1.1"
thiserror = "2.0"

[features]
default = ["impure"]
nix_tests = []
impure = []
no_leak = []
